--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/41f7ff25ed.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Gelasio|Reenie+Beanie&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/styles.css">
 
     <script src="https://unpkg.com/airtable@0.8.1/build/airtable.browser.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
@@ -49,8 +49,15 @@
             <li>1-877-762-5011</li>
             <li><a href="mailto:reservations@blackrockresort.com">reservations@blackrockresort.com</a></li>
           </ul>
-          Use the group booking name: "Pietras Forster Wedding 2020". There is a two night minimum.
-          <br><br>
+          Use the group booking name: "Pietras Forster Wedding 2020". We have a great group rate, but there is a two night minimum.
+          <br>
+          <ul>
+            <li>Suite - $179 a night</li>
+            <li>Bedroom - $269 a night</li>
+          </ul>
+
+
+          <br>
           The reservation block is held until 7th of August, please book your rooms before then.
           <br>You do not have to stay at Black Rock, feel free to find your own accommodation in Ucluelet. There are some very nice cabins available not far from the wedding.
         </p>
