add contact emails

--- a/index.html
+++ b/index.html
@@ -73,11 +73,18 @@
 
         <h3 id="ucluelet-link"><a href="https://www.google.com/maps/d/u/0/edit?hl=en&mid=19zdrOwXJSjhpbidXsnryqWGrzti0F5rr&ll=48.93915505204332%2C-125.55124719999998&z=17" class="button" target="_blank">Map of Ucluelet</a></h3>
 
+        <h2>Contact</h2>
+
+        <ul>
+          <li>Matt - forster.matth through gmail</li>
+          <li>Dominique - dominiquepietras through gmail</li>
+        </ul>
+
         <h2>Recommendations</h2>
 
         <h3>Travel</h3>
         <ul>
-          <li>We recommend a flight from Calgary to Nanimo (Vancouver Island)</li>
+          <li>We recommend a flight to Nanimo (Vancouver Island)</li>
           <li>Renting a car in Nanimo to drive to Ucluelet is a great way to see some awesome landscape on Vancouver Island</li>
           <li>If you choose to drive through Vancouver, be aware of; ferry schedule changes, line ups, and rush hour traffic - all which can cause very long delays.</li>
         </ul>
