feat: 2021 re-release

--- a/index.html
+++ b/index.html
@@ -42,29 +42,41 @@
     <div class="second">
       <div class="content-block" id="about">
         <h2>Sunday, September 5th, 2021</h2>
+        <p>
+          Dear Friends and family,<br><br>
+          We've decided to resend our invitations and reinvite everyone in hopes that it is possible to run some semblance of a gathering later next year.
+          Of course, given the circumstances, plans might change - and we will update the information below and email you if that happens. We recognize
+          that it will be a new year, under new circumstances, and understand if you are unable to come.
+          We are still committed to providing an experience that everyone will cherish.
+        </p>
+
         <h2>Stay</h2>
         <p>Black Rock Resort, Ucluelet, BC <br> 596 Marine Drive, V0R 3A0</p>
-        <p>To book:
+        <p>
+          To book:
           <ul>
             <li>1-877-762-5011</li>
             <li><a href="mailto:reservations@blackrockresort.com">reservations@blackrockresort.com</a></li>
           </ul>
-          Use the group booking name: "Pietras Forster Wedding 2020". We have a great group rate, but there is a two night minimum.
+
+          <p>Use the group booking name: "Pietras Forster Wedding 2020". We have a great group rate, but there is a two night minimum.</p>
           <br>
+
           <ul>
-            <li>Suite - $179 a night</li>
-            <li>Bedroom - $269 a night</li>
+            <li>Suite (single room) - $179 a night</li>
+            <li>Bedroom (two rooms, couch) - $269 a night</li>
           </ul>
 
-
           <br>
-          The reservation block is held until 7th of August, please book your rooms before then.
-          <br>You do not have to stay at Black Rock, feel free to find your own accommodation in Ucluelet. There are some very nice cabins available not far from the wedding.
+          <p>
+            The reservation block is held until 7th of August, please book your rooms before then.
+            <br>You do not have to stay at Black Rock, feel free to find your own accommodation in Ucluelet. There are some very nice cabins available not far from the wedding.
+          </p>
         </p>
 
         <h2>Schedule</h2>
 
-        <table>
+        <table style="padding-left:1em">
           <th></th><th>Time</th><th>Location</th>
           <tr><td><h3>Ceremony</h3></td><td>1:30pm</td><td>Big Beach, Ucluelet</td></tr>
           <tr><td><h3>Appetizers</h3></td><td>3:30pm</td><td>Wine Cellar, Black Rock Resort</td></tr>
@@ -98,23 +110,23 @@
         <div class="gallery">
           <div class="polaroid" id="img-top-left">
             <img src="./assets/1190168.jpg"></img>
-            <div>Banff 2018</div>
+            <div>banff 2018</div>
           </div>
           <div class="polaroid" id="img-top-right">
             <img src="./assets/P8020230.JPG"></img>
-            <div>Okanagan 2018</div>
+            <div>okanagan 2018 - engagement</div>
           </div>
           <div class="polaroid" id="img-middle-middle">
             <img src="./assets/20171022_171456_Original.jpg"></img>
-            <div>Jasper 2017</div>
+            <div>jasper 2017</div>
           </div>
           <div class="polaroid" id="img-bottom-left">
-            <img src="./assets/Engagement-4.jpg"></img>
-            <div>Engagement 2019</div>
+            <img src="./assets/IMG_9657.jpg"></img>
+            <div>COVID Ceremony 2020</div>
           </div>
           <div class="polaroid" id="img-bottom-right">
-            <img src="./assets/Engagement-44.jpg"></img>
-            <div>Engagement 2019</div>
+            <img src="./assets/Engagement-4.jpg"></img>
+            <div>engagement photoshoot 2019</div>
           </div>
         </div>
       </div>
@@ -126,7 +138,7 @@
         <p>You can come back and update this anytime before May 1st, 2020.</p>
 
           <form id="code-form" action="#">
-            <label for="name">Invite Code: </label><input id="invite-code">
+            <label for="name" style="color:white">Invite Code: </label><input id="invite-code">
             <input class="button" id="submit-invite-code" type="button" value="Get Guests" onclick="rsvpGen()"/>
           </form>
           <form id="rsvp-form" action="#">
