Clarify RSVP button

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
           <form id="code-form" action="#">
             <label for="name" style="color:white">Invite Code: </label><input id="invite-code">
-            <input class="button" id="submit-invite-code" type="button" value="Get Guests" onclick="rsvpGen()"/>
+            <input class="button" id="submit-invite-code" type="button" value="Find RSVP" onclick="rsvpGen()"/>
           </form>
           <form id="rsvp-form" action="#">
           </form>
