--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <script src="https://unpkg.com/airtable@0.8.1/build/airtable.browser.js" type="text/javascript"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <script src="js/scripts-clean.js" type="text/javascript"></script>
   </head>
 <body>
 
